// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with moltply  expensrs 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense totaling 
    $1,141.95
     
  </h1>
</div>
`;

exports[`should render ExpensesSumary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense totaling 
    $1.95
     
  </h1>
</div>
`;
